<resources>
    <string name="app_name">SongDatabase</string>
    <string name="enter_a_word">Enter a word</string>
    <string name="enter_song_name">Enter song name</string>
    <string name="enter_singer">Enter singer</string>
    <string name="enter_movie_name">Enter movie name</string>
    <string name="duration">Duration</string>
    <string name="done">Insert</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="search_a_song">Search a song</string>
    <string name="enter_the_singer_name">Enter the singer name</string>

</resources>