<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <EditText
        android:id="@+id/roomEdit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/enter_song_name"
        android:inputType="text"
        android:layout_marginTop="@dimen/margin_t"
        android:textSize="20sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editSinger"
        android:layout_gravity="center"
        android:hint="@string/enter_singer"
        android:inputType="text"
        android:layout_marginTop="@dimen/margin_t"
        android:textSize="20sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/enter_movie_name"
        android:id="@+id/editMovie"
        android:layout_marginTop="@dimen/margin_t"
        android:inputType="text"
        android:textSize="20sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/duration"
        android:id="@+id/editDuration"
        android:layout_marginTop="@dimen/margin_t"
        android:textSize="20sp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_marginTop="@dimen/margin_t"
        android:layout_gravity="center"
        android:id="@+id/roomdone"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search"
        android:text="@string/search"
        android:layout_marginTop="@dimen/margin_t"
        android:layout_gravity="center"
        />

</LinearLayout>